# statestack

./: .gitignore  .travis.yml  CHANGES.md  LICENSE  statestack.cabal
.github/workflows/: haskell-ci.yml
Control/Monad/: StateStack.hs
