Name:                statestack
Version:             0.2.0.5
Synopsis:            Simple State-like monad transformer with saveable and restorable state
Description:         Simple State-like monad transformer where states can be saved to
                     and restored from an internal stack.
License:             BSD3
License-file:        LICENSE
Extra-source-files:  CHANGES.md
Author:              Brent Yorgey
Maintainer:          byorgey@cis.upenn.edu
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.10
Bug-reports:         http://github.com/diagrams/statestack/issues
Tested-with:         GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.2, GHC == 8.0.1
Source-repository head
  type: git
  location: git://github.com/diagrams/statestack

Library
  Default-language:    Haskell2010
  Exposed-modules:     Control.Monad.StateStack
  Build-depends:       base >= 4.2 && < 4.10,
                       mtl >= 2.1 && < 2.3,
                       transformers >= 0.3 && < 0.6,
                       transformers-compat >= 0.4 && < 0.6
