Name:                statestack
Version:             0.3.1.1
Synopsis:            Simple State-like monad transformer with saveable and restorable state
Description:         Simple State-like monad transformer where states can be saved to
                     and restored from an internal stack.
License:             BSD3
License-file:        LICENSE
Extra-source-files:  CHANGES.md
Author:              Brent Yorgey
Maintainer:          byorgey@gmail.com
Category:            Control
Build-type:          Simple
Cabal-version:       >=1.10
Bug-reports:         http://github.com/diagrams/statestack/issues
Tested-with:         GHC ==8.0.2 || ==8.2.2 || ==8.4.4 || ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.8 || ==9.4.8 || ==9.6.6 || ==9.8.2 || ==9.10.1 || ==9.12.1
Source-repository head
  type: git
  location: git://github.com/diagrams/statestack

Library
  Default-language:    Haskell2010
  Exposed-modules:     Control.Monad.StateStack
  Build-depends:       base >= 4.8 && < 4.22,
                       mtl >= 2.1 && < 2.4,
                       transformers >= 0.4 && < 0.7
